Fix devcontainer UID/GID conflict
- Removed uid and gid parameters from common-utils feature
- Fixes 'UID: readonly variable' error in GitHub Codespaces
- Allows common-utils feature to install successfully

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -12,9 +12,7 @@
       "configureZshAsDefaultShell": "true",
       "installOhMyZsh": "true",
       "upgradePackages": "true",
-      "username": "vscode",
-      "uid": "1000",
-      "gid": "1000"
+      "username": "vscode"
     },
     "ghcr.io/devcontainers/features/git:1": {
       "version": "latest",
