Fix chsh command not found error
- Disabled configureZshAsDefaultShell in common-utils feature
- Added manual shell configuration in setup.sh script
- Install util-linux-user package to provide chsh command
- Handle shell configuration after all packages are installed
- Fixes 'chsh: command not found' error in GitHub Codespaces

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -9,7 +9,7 @@
     },
     "ghcr.io/devcontainers/features/common-utils:2": {
       "installZsh": "true",
-      "configureZshAsDefaultShell": "true",
+      "configureZshAsDefaultShell": "false",
       "installOhMyZsh": "true",
       "upgradePackages": "true",
       "username": "vscode"
