Fix Docker-in-Docker compatibility issue
- Switch from rockylinux:9 to Red Hat UBI9 base image
- UBI9 has better compatibility with devcontainer features
- Fixes 'dpkg: command not found' error in docker-in-docker feature
- Update OS detection in setup script for UBI9
- Maintains RHEL/Rocky Linux compatibility for learning objectives

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,6 +1,6 @@
 {
   "name": "Docker & Rocky Linux Learning Environment",
-  "image": "rockylinux:9",
+  "image": "registry.access.redhat.com/ubi9/ubi:latest",
   "features": {
     "ghcr.io/devcontainers/features/docker-in-docker:2": {
       "version": "latest",
