Fix devcontainer compatibility with RHEL simulation approach
- Switch to Ubuntu 22.04 base image for full devcontainer feature compatibility
- Create comprehensive RHEL simulation environment with dnf and systemctl wrappers
- Maintain all RHEL learning objectives while ensuring container builds successfully
- Provide educational dnf commands that map to apt-get underneath
- Simulate systemctl commands for service management learning
- Real Docker functionality with simulated RHEL package/service management
- Clear messaging that this is a learning simulation of RHEL environment

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,6 +1,6 @@
 {
-  "name": "Docker & Rocky Linux Learning Environment",
-  "image": "registry.access.redhat.com/ubi9/ubi:latest",
+  "name": "Docker & Red Hat Enterprise Linux Learning Environment",
+  "image": "ubuntu:22.04",
   "features": {
     "ghcr.io/devcontainers/features/docker-in-docker:2": {
       "version": "latest",
