Refactor course from RHEL simulation to Ubuntu-native with RHEL comparisons
Major Changes:
- Remove RHEL simulation hacks from devcontainer setup
- Update to clean Ubuntu 22.04 environment with native apt commands
- Rename module: 01-rocky-linux-basics → 01-ubuntu-linux-basics
- Add comprehensive Ubuntu vs RHEL comparisons throughout course
- Update all documentation to reflect Ubuntu-first approach
- Maintain educational value about RHEL differences for enterprise readiness

Benefits:
- Eliminates confusion from simulated RHEL commands on Ubuntu
- Provides authentic Ubuntu learning experience
- Builds RHEL awareness for cross-platform skills
- Docker commands remain identical across all platforms
- Cleaner, more professional course structure

Files Updated:
- DevContainer configuration and setup scripts
- Main README and course summary
- Module 1 content and package management lessons
- Docker installation lessons with Ubuntu focus
- Shared resources and cheat sheets
- Final project with deployment comparisons

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,5 +1,5 @@
 {
-  "name": "Docker & Red Hat Enterprise Linux Learning Environment",
+  "name": "Docker & Ubuntu Linux Learning Environment",
   "image": "ubuntu:22.04",
   "features": {
     "ghcr.io/devcontainers/features/docker-in-docker:2": {
